<resources>
    <string name="app_name">हरित कंधार परिवार</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="live_support"><u>ऑनलाईन समर्थन</u></string>
    <string name="forgot_password"><u>पासवर्ड विसरलात?</u></string>
    <string name="register"><u>फळझाड लागवड अभियान नोंदणी \n हरित कंधार परिवार</u></string>
    <string name="splash_title">हरित कंधार परिवार</string>
    <string name="terms_amp_condition">¡ò³ýZÉÉb÷ ±ÉÉMÉ´Éb÷ +Ê¦ÉªÉÉxÉ \n ÊxÉªÉ¨É ´É +]õÒ</string>
    <string name="t_and_c">\t१. हे फळझाड अभियान फक्त कंधार शहर व ग्रामीण साठी मर्यादित आहे. \n २. फळझाड घेऊन जातांना तो व्यक्ती स्वतः आधार कार्डसहित उपस्थित रहावे. \n ३. फळझाड लावणाऱ्या व्यक्तीने त्या झाडाची किमान ३ वर्ष संगोपन करणे आवश्यक आहे. \n ४ . प्रत्येक तीन महिन्यांची वाढ झालेल्या झाडाची फोटो हरित कंधार अँप  (Harit Kandhar App) वर टाकणे (Upload) आवश्यक आहे. \n ५ . ३ वर्ष पुर्नवाढ झालेले फळझाड हे बक्षिसास (प्रोत्साहनपर) पात्र राहील. \n ६ . एका कुटुंबात दोनझाडे दिली जातील. \n ७ . फळझाड लावणाऱ्या व्यक्तीकडून फॉर्म भरून घेतला जाईल व त्यास पावती दिली जाईल ती पावती बक्षीस (प्रोत्साहनपर) देण्यासाठी आवश्यक राहील. \n ८ . हि सर्व माहिती व फोटो अपलोड हरित कंधार अँपवर  करणे आवश्यक आहे. \n ९ . हरित कंधार परिवार व मामडे ज्वेलर्स चा मूळ उद्देश झाडे लावणे व जगवणे हे आहे याचा विसर पडता कामा नये. \n १० . फळझाडांची संख्या मर्यादित आहे.</string>
    <string name="about_us"><![CDATA[This application is developed by Anviinfotechs. For any kind of query kindly reach us via email using reach us option.]]></string>
    <string name="intro_card">½þ®úÒiÉ EÆòvÉÉ®ú {É®úÒ´ÉÉ®ú {ÉÊ®úSÉªÉ</string>
    <string name="new_user_registration">नवीन वापरकर्ता नोंदणी</string>
    <string name="verification_code">पडताळणी कोड</string>
    <string name="email">ईमेल / फोन नंबर</string>
    <string name="password">पासवर्ड</string>
    <string name="login">लॉगिन</string>
    <string name="developed_by">विकसित : AnviInfotechs</string>
    <string name="email_support">ईमेल : support@anviinfotechs.com</string>
    <string name="termandcondition">ÊxÉªÉ¨É ´É +]õÒ</string>
    <string name="plantaioninfo">¡ò³ýZÉÉb÷ ±ÉÉMÉ´Éb÷ ¨ÉÉÊ½þiÉÒ</string>
    <string name="plantphotoupload">¡ò³ýZÉÉb÷ ±ÉÉMÉ´Éb÷ ¡òÉä]õÉä</string>
    <string name="sponsor">¨ÉxÉÉäMÉiÉ</string>
    <string name="logout">लॉग आउट</string>
    <string name="resend_code">कोड पुन्हा पाठवा</string>
    <string name="verify">सत्यापित करा</string>
    <string name="verify1">ईमेल सत्यापित करा</string>
    <string name="full_name">पूर्ण नाव</string>
    <string name="address">पत्ता</string>
    <string name="village">गाव</string>
    <string name="tehsil">तहसील</string>
    <string name="district">जिल्हा</string>
    <string name="pincode">पिन कोड</string>
    <string name="survey_number">सर्वे नंबर</string>
    <string name="house_number">घर नंबर</string>
    <string name="mobile_number">मोबाईल नंबर</string>
    <string name="email_id">ईमेल</string>
    <string name="confirm_password">पुष्टी पासवर्ड</string>
    <string name="register_text">नोंदणी करा</string>
    <string name="back_to_login">लॉगिन वर परत</string>
    <string name="whatsapp_number">व्हॉट्सअ‍ॅप नंबर</string>
    <string name="raise_request">विनंती पाठवा</string>
    <string name="change_password">पासवर्ड बदला</string>
    <string name="rationale_location_contacts">Permission required for application.</string>
    <string name="rationale_ask_again">
This app may not work correctly without the requested permissions.
Open the app settings screen to modify app permissions.
</string>
    <string name="returned_from_app_settings_to_activity">Returned from App Setting to Activity</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="maan_t"><b>-: मनोगत:- </b></string>
    <string name="maan">मी शिवा मामडे,\n \t \t \t आपणा सर्वांना जागतिक पर्यावरण दिनाच्या हार्दिक शुभेच्छा, वृक्षवल्ली आम्हा सोयरे, या संतांच्या वाणी प्रमाणे आम्ही हरीत कंधार परिवाराच्या वतीने आम्ही कंधार शहर व तालुक्यात वृक्ष लागवडीचा उपक्रम हाती घेतला आहे. कारण वृक्ष लागवडी पेक्षा वृक्षतोड मोठ्या प्रमाणात होत आहे. एक झाड संपूर्ण वाढ होण्यासाठी किमान दहा वर्षे तरी लागतात. पण शेकडो झाडे तोडायला काही मिनिटे.. म्हणून आम्ही वृक्ष लागवडीला आपले कर्तव्य जाणून वसुंधरेचे पांग फेडण्याकरिता हा उपक्रम हाती घेतला, २०१७ साली हरित कंधारच्या मुख्य व अंतर्गत रस्त्याच्या दुतर्फा ५०० झाडे लावली एवढेच नाहीतर पूर्ण दोन वर्षे पाणी टाकून जोपासली ही, आता या वर्षी उपक्रम हाती घेतला ते फळझाड लागवडीचा तो म्हणजे </string>
    <string name="maan_1"><b>एक झाड लावा १००० / - रु मिळवा.</b> </string>
    <string name="maan_2">या उपक्रमात आम्ही एका कुटुंबात दोन चांगल्या प्रतीचे फळझाड देणार आहोत या पाठीमागचा उद्देश एवढाच की ही फळझाडे जगली पाहिजेत या उद्देशाने आम्ही कंधार तालुक्यातील जनतेला आव्हान करतोत की, आपण या उपक्रमात सहभागी व्हावे व हरित कंधार स्वच्छ कंधार करण्यास सहकार्य करावे ही. नम्र विनंती.</string>
    <string name="mann_s">आपला</string>
    <string name="mann_s1">शिवा रमाकांत मामडे </string>
    <string name="mann_s2"> हरीत कंधार परिवार</string>
    <string name="Mango">जमीन :- \n
मध्य्म ते भारी प्रतीची, १.५ ते २.० मी. खोलीची,पाण्याचा चांगला निचरा होणारी.
\nलागवड \n
१० x १० मी भारी जमीनीत \n
९ X ९ मी मध्य्म जमीनीत\n
१ X १ X १ मी. आकाराचे खडे घेऊन शेखापत (४०-५०) किलो )+ पोयटा माती + सिंगल सुपर फॉस्फेट ( २ किलो) मिश्रणाने भरावेत.\n
खते\n
एक वर्ष वयाच्या झाडास १५ किलो कंपोस्ट खत, १५० ग्रॅम नत्र, ५० ग्रॅम स्फुरद १०० ग्रॅम पालाश पावसाळयाच्या सुरूवातीस चर खोदून दयावेत. दरवर्षी ही मात्रा समप्रमाणात वाढवून १० व्या वर्षापासून प्रत्येक झाडास ५० किलो कंपोस्ट खत,१.५ किलो नत्र, ५०० ग्रॅम स्फुरद व १ किलो पालाश बांगडी पदधतीने जून महीन्यात दयावे.
पाण्याची उपलब्धता असल्यास फळधारणेनंतर ३-४ पाण्याच्या पाळया द्याव्यात.\n
फळांची काढणी\n
आंबा फळे १४ आणे (८५% ) पक्वतेची काढावीत. फळांना लालसर रंगाची छटा येते.फळांचा रंग गर्द हिरव्यापासून फिकट होतो तसेच फळांच्या देठानजीक खोलगट भा्ग तयार होतो. यावेळी फळांची विशिष्ट घनता १.०२ ते १.०४ एवढी असावी. फळांची काढणी देठासहीत करावी. फळे सकाळी सकाळी लवकर किंवा सध्याकाळी चारनंतर काढावीत.\n
प्रतवारी\n
३५० गॅम, ३००-३५१ ग्रॅम. २५१ ते ३०० ग्रॅम व २५० ग्रॅम पेक्षा कमी वजनाची अशी प्रतवारी करावी. प्रतवारी झाल्यावर फळे ५०० पीपीएम कार्बनडेन्झिम (१ लिटर पाण्यात ) च्या द्रावणात १० मि. बुडवावीत त्यामुळे कुजण्याचे प्रमाण कमी होते. त्यानंती फळे पंख्याखाली वाळवुन खोक्यामध्ये भरावीत.
\nकीड व रोग नियंत्रणे
\nतुडतुडे: – \nपिल्ले व पुर्ण वाढलेले तुडतुडे कोवळी पाने, मोहोर व छोटया फळांच्या देठातून रस शोषतात, यामुळे पाने वेडीवाकडी होतात, पालवी कोमेजते, मोहोर गळतो. तसेच छोटी फळेही गळतात. मोहोराच्या वेळी तुडतुडयांचा प्रादुर्भाव प्रकर्षाने जाणवतो.
किडीच्या  नियंत्रणासाठी बागेत पुरेसा सुर्यप्रकाश राहील अश्या प्रकारे फांदयांची विरळणी करावी. वेळोवेळी बागेचे सर्वेक्षण करून तूडतूडे पिलांच्या अवस्थेत असतानाच डायमेथेएट ३० ई.सी (१०मिली/१०ली)किंवा मेनिट्रोथिऑन (५० ई.सी (१० मिली/१० ली) कीटकनाशकांची फवारणी करावी.
\n मिजमाशी:-\n
मिजमाशी कोवळया पालवीच्या दांडयावर. पानांच्या देठावर,मोहोराच्या मधल्या दांडयावर, तसेख् मोहोराच्या तु-यावर अंडी घालते व त्यातून बाहेर येणारी पांढरट पिवळसर अळी आतील पेंशीवर उपजीवीका करते. परीणामी त्या ठिकाणी बारीक फुगारे काळी गाठ तयार होते. अश्या असंख्य गाठी पालवीवर व मोहोरावर दिसून येतात व त्यामुळे पालवी व मोहोर करपतो.
जून जुलैमधील पालवीवरील मिजमाशीचे नियंत्रण करण्यासाठी पावसाळयात उघडीप पाहून डायमेथोएट ३० ई.सी (१० मिली/१० ली) किंवा मेनिट्रोथिऑन (५० ई.सी(१० मीली/१० ली) फवारावे. या कीडीची अळी जमीनीत कोषावस्थेत जात असल्यामुळे पाऊस थांबल्यानंतर झाडाखालची जमीन नांगरून त्यात मिथील पॅराथिऑनची भुकरी मिसळावी.
\nफळमाशी :-\n
 फळ पिकवण्याच्या अवस्थेत असताना मादी फळांच्या सालीत अंडी घालते. त्यातून बाहेर येणा-या अळया गरांवर उपजीवीका करतात. किडींच्या नियंत्रणासाठी कीडग्रस्त फळे नष्ट करावेत.
\nभुरी :–\n
मोहर व कच्चया फळांची गळ होते. नियंत्रणासाठी रोगग्रस्त पाने, मोहर नष्ट करावेत. ०.२टक्के गंधकाची पहीली फवारणी करावी. १५ दिवसांनी ०.१ टक्के डिनोकॅपची दुसरी फवारणी करावी.
\nडायबॅक :–\n
रोगग्रस्त् फांदया शेंडयापासून वाळायला लागतात.नियंत्रणासाठी निरोगी कलमांची निवड करावी. रोगग्रस्त फांदयांची ३ इंच खालपासुन छाटणी करावी, त्यानंतर ०.३ टक्के ऑक्झीक्लोराइडची फवारणी करावी.</string>
    <string name="intro_harit"><u><b>हरित कंधार परिवार परिचय </b></u> \n परिवार म्हटल की कुटुंब, स्नेह, आपुलकी, प्रेम एकजुट याच भावनेतून कंधार शहरातील काही तरुण मंडळी एकत्र आली आपण काहीतरी समाजासाठी चांगले केले पाहिजे असा विचार मनात आणून संकल्प केला व त्यातुनच जन्म झाला हरीत कंधार परिवाराचा त्यात आग्रहीभूमिका होती ती \'मामडे ज्वेलर्सचे शिवा मामडे \' यांची त्याच्या संकल्पनेतून हरीत कंधार परिवाराच्या सर्व सदस्यांनी ठरवलं की कंधार शहरात पूर्ण वृक्ष लागवड करण्याचा निर्धार केला. कंधार शहरा लगत मोठ्या प्रमाणात ग्रामीण भाग असून नोकरी व कामधंद्दयाच्या निमित्ताने ग्रामीण भागातून लोक कंधार शहरात येत असतात. वाढत्या वस्त्या व होणारी वृक्षतोड यामुळे कंधार शहराचे नैसर्गिक सौदर्य नष्ट होत चाललेले आहे. हे लक्षात घेऊन हरीत कंधार परिवाराच्या वतीने दि. ०१ जुलै २०१७ रोजी साधु,संत महंत , प्रतिष्ठीत नागरीक, व्यापारी, विद्यार्थी, शिक्षक, पत्रकार आदिंच्या उपस्थितीत या अभियानाची सुरुवात केली संपूर्ण शहरात ५०० झाडे लावण्यात आली. एवढेच नाहीतर लावलेली झाडे वर्षभर पाणि टाकूण जगवली आज त्याचे स्वरुप शहरात प्रवेश करतांना दोन्ही बाजुस हिरवीगार झाडे मन प्रसन्न करतात. हेच या कार्याचे समाधान.</string>
    <string name="intro_harit1"><u><b>हरीत कंधार स्वच्छ कंधार </b></u> \n शहरातील वृक्ष लागवडीच्या उपक्रम यशस्वी पुर्ण करुन हरीत कंधार परिवाराच्या वतीने शहर स्वच्छतेचा संकल्प केला व शासकीय कार्यालय, व्यापार पेठ व इतर जागो जागी कचरा कुंडी बसवण्यात आले व स्वच्छतेचे महत्व शहरवासियांना समजावुन सांगण्याचा प्रयत्न केला.</string>
    <string name="intro_harit2"><u><b>अवयवदान शिबीर  </b></u> \n देशभरामध्ये असे असंख्य रुग्न आहेत की, त्याच्या शरीरातील काही अवयव निकामी झालेले आहेत त्यामुळे आपल्या मृत्यूनंतर ते अवयव इतरांच्या कामी यावे व त्या रुग्णास आपले पुढील आयुष्य जगता यावे या करीता हरीत कंधार परिवाराच्या वतीने अवयवदान संकल्प शिबीर घेण्यात आले.</string>
    <string name="intro_harit3"><u><b>पानपोई </b></u>  \n हरीत कंधार परिवार व मामडे ज्वेलर्सच्या वतीने शहरातील मुख्य चौकात पानपोईची सोय गेले दहा वर्षापासून  महाराणा प्रताप चौक, स्मशानभूमी, छ. शिवाजी महाराज चौक येथे करण्यात येते एवढेच नाहीतर पूर्ण उन्हाळाभर थंड व शुध्दपाणी पाजवण्याचे सत्कार्य करण्याचा प्रयत्न आम्ही करत असतो .</string>
    <string name="intro_harit4"><u><b>स्मशानभुमीत सोई सुविधा </b></u>  \n  मरावे पण र्कितीरुपी उरावे या उक्तीप्रमाणे कंधार शहरातील हिंदू स्मशान भुमीचे सुशोभिकरण करण्याचे काम हरीत कंधार परिवाराच्या वतीने हाती घेण्यात आले. स्मशानभुमीत वृक्षलागवड करण्यात आले विशेषताः विविध फुलझाडे लावण्यात आली एवढेच नाही तर अंत्यविधीसाठी आलेल्या लोकांना बसण्यासाठी आसन व्यवस्था ही करण्यात आली.</string>
    <string name="intro_harit5"><u><b>एकझाड लावा १००० रुपये मिळवा </b></u>  \n  सन २०२० ची सुरुवात कोरोनो ( COVID-19 ) सारख्या महाभयानक महामारीने झाली असताना. प्रत्येकाने सुरक्षित रहाने हे अद्द कर्तव्य मानले पाहीजे त्याच अनुशंगाने हरीत कंधार परिवाराच्या वतीने फळझाड लागवड अभियान अंतर्गत एकझाड लावा १००० / - रुपये मिळवा हा उपक्रम राबविण्याचे ठरविले, फळझाडा सोबत एक हजार रुपये देण्याच्या पाठीमागचा उद्देश एवढाच की ही फळझाडे जगली पाहीजे व वाढली पाहीजे कारण पाच दहा वर्षा पूर्वी आपल्या अंगणात, परसबागेत, शेतात अनेक फळझाडे असायची त्या फळांचा स्वाद नातु, पंतु अनेक पिढ्या घ्यायच्या पण आता हे राहीले नाही म्हणुनच आम्ही हे फळझाड लावण्याचा उपक्रम हाती घेतला आहे. ही फळझाड लावणे, जगवणे, वाढवणे हाच मुख्य उद्देश आहे. त्यासाठी आपल्या सर्वांचे अमुल्य सहकार्य आवश्यक आहे. त्यातुनतच ही हरीत क्रांती होईल.</string>
</resources>