<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log_bk"
    android:padding="10dp"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="30dp"
        app:cardBackgroundColor="#411A1A1A"
        app:cardCornerRadius="12dp"
        app:cardElevation="@dimen/_16sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="22dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lTextEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/white"
                app:boxBackgroundColor="#BCB88E"
                app:boxStrokeColor="@android:color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lEditEmail"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lTextPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/white"
                app:boxBackgroundColor="#BCB88E"
                app:boxStrokeColor="@android:color/white"
                app:passwordToggleDrawable="@drawable/icon_selector"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lEditPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnForgotPassword"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="42dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="10dp">

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#D84F4F"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/register"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="16sp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/live_support"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/developed_by"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/email_support"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>