<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".IntroActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/ToolbarColoredBackArrow">

            <TextView
                android:id="@+id/lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#A9FFFFFF"
                android:textColor="@android:color/black"
                android:text="@string/intro_harit"
                android:gravity="center"
                android:textSize="16sp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/testing0"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/testing1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#A9FFFFFF"
                android:textColor="@android:color/black"
                android:text="@string/intro_harit1"
                android:gravity="center"
                android:textSize="16sp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/testing2"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#A9FFFFFF"
                android:textColor="@android:color/black"
                android:text="@string/intro_harit2"
                android:gravity="center"
                android:textSize="16sp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/banner_c"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#A9FFFFFF"
                android:textColor="@android:color/black"
                android:text="@string/intro_harit3"
                android:gravity="center"
                android:textSize="16sp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/testing4"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#A9FFFFFF"
                android:textColor="@android:color/black"
                android:text="@string/intro_harit4"
                android:gravity="center"
                android:textSize="16sp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/testing5"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#A9FFFFFF"
                android:textColor="@android:color/black"
                android:text="@string/intro_harit5"
                android:gravity="center"
                android:textSize="16sp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/testing6"
                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>